<resources>
    <string name="app_name">House Renovation</string>
    <string name="log_in">Log In</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Personal Name</string>
    <string name="password_hint">Password</string>
    <string name="or_separator">or</string>
    <string name="register_here">Register here</string>
    <string name="register">Register</string>
    <string name="phoneNumber_hint">Phone number</string>
    <string name="address_hint">Address</string>
    <string name="submit">Submit</string>
    <string name="worker">Worker</string>
    <string name="customer">Customer</string>
    <string-array name="category_array">
        <item>Builder</item>
        <item>Electrician</item>
        <item>Carpenter</item>
        <item>Drywall repair</item>
        <item>Plumber</item>
        <item>Gardener</item>
    </string-array>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="new_service_request">New Service Request</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="category">Category:  %1$s</string>
    <string name="rating">Rating</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_personal_name">Edit Personal Name</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_category">Edit Category</string>
    <string name="search_hint">Search</string>
    <string name="requests">Requests</string>
    <string name="cancel">Cancel</string>
    <string name="selectCategory">Select Category:</string>
    <string name="title">Title: %1$s</string>
    <string name="title_hint">Edit Title</string>
    <string name="description">Description:  %1$s</string>
    <string name="description_hint">Edit Description</string>
    <string name="location">Location:</string>
    <string name="request_service">Request Service</string>
    <string name="current_job">Current Job</string>
    <string name="personalName">Personal Name:  %1$s</string>
    <string name="phoneNumber">Phone Number:  %1$s</string>
    <string name="finish_job">Finish Job</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="job_details">Job Details</string>
    <string name="jobs">Jobs</string>
    <string name="my_requests">My Requests</string>
    <string name="hire">Hire</string>
    <string name="workers">Workers</string>
    <string name="email_hint">Email</string>
    <string name="service_details">Service Details</string>
    <string name="noJob">No Job or the current job is canceled</string>
    <string name="category1">Category</string>
    <string name="title1">Title:</string>
    <string name="description1">Description:</string>
    <string name="search_by_worker_personal_name">Search worker by personal name</string>
    <string name="confirm">Confirm</string>
    <string name="rate_worker">Rate Worker</string>
    <string name="startWorking">Start working</string>
    <string name="noRequests">No Requests</string>
    <string name="noJobs">No Jobs</string>
    <string name="RateTheWorker">Rate the Worker</string>
    <string name="WorkerName">Worker Personal Name</string>
    <string name="declinedMessage">Your request is declined by the worker, please CANCEL the request and hire other worker.</string>
    <string name="rating1">Rating: %1$s</string>
</resources>