<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/HRA_TXT_currentJob_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_job"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/HRA_TXT_currentJob_txtView"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/HRA_TXT_currentJob_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/HRA_TXT_currentJob_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/HRA_TXT_currentJob_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"
                android:layout_marginVertical="16dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        />
                </RelativeLayout>

            <TextView
                android:id="@+id/HRA_TXT_currentJob_customer_personalName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalName"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                />
            <TextView
                android:id="@+id/HRA_TXT_currentJob_customer_phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                />
            <com.google.android.gms.maps.MapView
                android:id="@+id/HRA_MAP_currentJob_map"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="8dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/HRA_BTN_currentJob_finish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/HRA_BTN_currentJob_cancel"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/holo_green_dark"
                    android:padding="12dp"
                    android:text="@string/finish_job"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/HRA_BTN_currentJob_cancel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/holo_red_dark"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:text="@string/cancel_job"/>
            </RelativeLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>