<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/HRA_TXT_rate_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RateTheWorker"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/HRA_TXT_rate_worker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WorkerName"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"/>

    <RatingBar
        android:id="@+id/HRA_RATINGBAR_worker_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:layout_gravity="center"
        android:rating="0"/>

    <Button
        android:id="@+id/HRA_BTN_rate_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="end"
        android:layout_marginTop="16dp" />
</LinearLayout>
