<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@android:color/white"
    android:padding="16dp"
    android:elevation="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <TextView
            android:id="@+id/HRA_TXT_currentJob_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_details"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/HRA_TXT_job_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title: Garden"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/HRA_TXT_job_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description: Cut grass"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/HRA_TXT_job_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Category: GARDNER"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/HRA_TXT_job_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date: 8/8/2024"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginVertical="16dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/HRA_TXT_job_customer_personalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalName"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/HRA_TXT_job_customer_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/HRA_TXT_job_customer_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/HRA_BTN_job_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/HRA_BTN_job_decline"
                android:layout_marginEnd="8dp"
                android:text="@string/accept"
                android:textColor="@color/white"
                android:background="@drawable/rounded_accept_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/HRA_BTN_job_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/decline"
                android:textColor="@color/white"
                android:background="@drawable/rounded_cancel_button"/>


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
