<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HRA_SCREEN_customer_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:background="@color/app_background_color">

    <!-- Search Bar -->
    <RelativeLayout
        android:id="@+id/HRA_LAYOUT_searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_background"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/HRA_IMG_home_searchIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_search"
                android:layout_gravity="center_vertical"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/HRA_ETXT_home_searchEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/search_by_worker_personal_name"
                android:paddingHorizontal="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:ellipsize="end"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/HRA_TXT_home_categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HRA_LAYOUT_searchBar"
        android:text="@string/category1"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <!-- Category Buttons -->
    <HorizontalScrollView
        android:id="@+id/HRA_HSV_home_scrollView"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/HRA_TXT_home_categoryText"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/HRA_LAYOUT_home_categoryButtonContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Buttons will be added dynamically here -->
        </LinearLayout>
    </HorizontalScrollView>
    <RelativeLayout
        android:id="@+id/HRA_LAYOUT_home_IconsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HRA_HSV_home_scrollView">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/HRA_IMG_home_mapIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="4dp"
            android:layout_marginVertical="12dp"

            android:src="@drawable/ic_map"
            android:layout_gravity="center_vertical"
            android:clickable="true"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/HRA_IMG_home_favoriteIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginVertical="12dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_heart"
            android:layout_gravity="center_vertical"
            android:clickable="true"/>
    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/HRA_VIEW_home_map_view"
        android:layout_width="420dp"
        android:layout_height="420dp"
        android:layout_below="@+id/HRA_LAYOUT_home_IconsLayout"
        android:visibility="gone"/>


    <RelativeLayout
        android:id="@+id/HRA_LAYOUT_customerHome_Workers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HRA_VIEW_home_map_view">
        <TextView
            android:id="@+id/HRA_TXT_customerRequests_requestsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/workers"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <!-- RecyclerView for the list of professionals -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/HRA_VIEW_customerHome_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/HRA_TXT_customerRequests_requestsText"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>



</RelativeLayout>
